--- a/grid.css
+++ b/grid.css
@@ -12,8 +12,6 @@
     margin-left: auto;
     margin-right: auto;
 }
-
-
 .grid{
     height: 150vh;
     display: grid;
@@ -28,7 +26,6 @@
     background-color: blue;
     text-align: center;
 }
-
 .nav{
     grid-area: nav;
     background-color: brown;
@@ -39,6 +36,7 @@
     margin-left: 10px;
 }
 .art{
+    justify-content: space-between;
     grid-area: sec;
     background-color: rgb(210, 212, 208);
     text-align: center;
@@ -49,7 +47,6 @@
     color: darkslategrey;
 }
 .art ul li{
-    
     list-style: none;
     padding: auto;
     margin: 10px;
